# nccl-lens

./: .gitignore  README.md
cpp/: CMakeLists.txt  bench_allreduce.cu  benchmark.cpp  benchmark.h  buffers.cpp  buffers.h  common.h  config.cpp  config.h  devices.cpp  devices.h  main.cu  mpi.cpp  mpi.h  nccl.cpp  nccl.h  telemetry.cpp  telemetry.h
python/: analyze.py
scripts/: setup_ubuntu_cuda.sh  smoke_test.sh
